QmlCompiler: Remove extra semicolons after jump code

Rather, generate a pair of curly braces even if the jump code is empty.

Pick-to: 6.7
Fixes: QTBUG-122004
Change-Id: I5531c75c052ccc99b55fcd4142b1e946de350e41
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>